tests/NormalTests/paczka1/small_fuzzy/40292484.err
Error in line 1: S0 A949 43,4
Error in line 2: aTE4TQ S0 58,6
Error in line 13: S0 A949 32,1
